src/scss/partials/_chatBubble.scss
/* ... */
.bubble.service {
  align-self: center;
  justify-content: center;

  .bubble-content {
    background-color: transparent;
  }
  
  .service-msg {
    color: #fff;
    //background-color: rgba(0, 0, 0, .24);
    background-color: var(--message-highlightning-color);
    font-size: .9375rem;
    padding: 0 .5rem;
    line-height: 1.5rem;
    border-radius: .75rem;
    user-select: none;
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;

    i {
      font-style: normal;
    }

    a {
      color: #fff;
    }

    a, .name {
      &:hover {
        text-decoration: underline;
      }
    }

    .name {
      cursor: pointer;
      //margin-right: 5px;
    }

    img.emoji {
      margin-bottom: 3px;
    }
  }
}

.bubble.is-in {
  .bubble-content {
    &, .poll-footer-button {
      border-radius: 6px 12px 12px 6px;
    }
  }
    
  &.is-group-first {
    .bubble-content, .poll-footer-button {
      border-top-left-radius: 12px;
    }
  }

  &.is-group-last {
    &.can-have-tail {
      .bubble-content, .poll-footer-button {
        border-bottom-left-radius: 0;
      }
  
      .bubble-content:after {
        margin-left: -8.4px;
        background-image: url('assets/img/msg-tail-left.svg');
      }
    }

    &:not(.can-have-tail) {
      .bubble-content, .poll-footer-button {
        border-bottom-left-radius: 12px;
      }
    }
  }

  &.forwarded .attachment,
  &.is-reply .attachment,
  &:not(.hide-name).is-message-empty .attachment/* ,
  &:not(.hide-name):not(.sticker) .attachment */ {
    border-top-left-radius: 0;
    border-top-right-radius: 0;
  }
  
  a {
    color: $color-blue;
  }

  .quote {
    @include hover() {
      background-color: $light;
    }
  }

  &.is-reply {
    &.emoji-big, &.sticker {
      .reply {
        left: calc(100% + 10px);
        background-color: #fff;

        @include respond-to(handhelds) {
          left: calc(100% + 1px);
        }
      }
    }
  }
  
  .quote {
    border-left: 2px $color-blue solid;
  }

  .quote .name, .reply-title/* , .reply i */ {
    color: $color-blue;
  }
  
  .time {
    margin-left: -1px;
    padding-right: 8px;

    .inner {
      color: #a3adb6;
      margin-bottom: 4px;
    }
  }

  &.is-message-empty.is-group-last {
    /* &:not(.with-media-tail):not(.with-replies) {
      &.photo, &.video {
        .bubble-content {
          border-bottom-left-radius: 6px;
        }
      }
    } */

    &.with-media-tail {
      .attachment {
        border-bottom-left-radius: 0;
      }

      .bubble__media-container {
        margin-left: -9px;
      }
    }
  }

  .audio-subtitle, .contact-number, .audio-time {
    color: #707579 !important;
  }

  /* .poll {
    &-answer-selected {
      &:before {
        margin-left: -1px;
      }
    }
  } */
}
/* ... */

